--- a/playbook.yml
+++ b/playbook.yml
@@ -1,9 +1,14 @@
 ---
-- name: Ansible playbook to dockerize and run yolo e-commerce app using ansible
+- name: Deploy Full Stack Application Using Dockerized Roles
   hosts: all
-  become: true
-  roles: 
-    - frontend-deployment
-    - setup-mongodb   
-    - backend-deployment
-    
+  become: yes
+
+  roles:
+    - role: setup-mongodb
+      tags: ["mongodb"]
+
+    - role: backend-deployment
+      tags: ["backend"]
+
+    - role: frontend-deployment
+      tags: ["frontend"]
