--- a/roles/setup-mongodb/tasks/main.yml
+++ b/roles/setup-mongodb/tasks/main.yml
@@ -1,14 +1,23 @@
----
-- name: Run MongoDB Container
+- name: Pull MongoDB image
+  docker_image:
+    name: "{{ mongo_image }}"
+    source: pull
+
+- name: Create custom bridge network if not exists
+  docker_network:
+    name: "{{ network_name }}"
+    driver: bridge
+    attachable: yes
+  ignore_errors: yes
+
+- name: Start MongoDB container
   docker_container:
-    name: app-mongo
-    image: mongo
+    name: "{{ mongo_container_name }}"
+    image: "{{ mongo_image }}"
     ports:
-      - '27017:27017'
+      - "{{ mongo_port }}:27017"
     volumes:
-      - ./app-mongo-data:/data/db
+      - "{{ mongo_volume }}:/data/db"
     networks:
-      - name: app-net
-  tags:
-    - database
-    - backend
+      - "{{ network_name }}"
+    recreate: yes
