Stage 1 complete - automated deployment with Ansible and Vagrant

--- a/roles/backend-deployment/tasks/main.yml
+++ b/roles/backend-deployment/tasks/main.yml
@@ -12,7 +12,5 @@
     env:
       MONGODB_URI: "{{ mongo_connection_string }}"
     networks:
-      - "{{ network_name }}"
-    depends_on:
-      - mongo_db
+      - name: "{{ network_name }}"
     recreate: yes
