--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,5 @@ remote_user = vagrant
 private_key_file = .vagrant/machines/default/virtualbox/private_key
 host_key_checking = False
 roles_path = roles
+interpreter_python = /usr/bin/python3
+deprecation_warnings = False
