--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,2 @@
 [all]
-yolo-app ansible_host=127.0.0.1 ansible_port=2222 ansible_user=vagrant ansible_private_key_file=~/.vagrant/private_key
+yolo-app ansible_host=127.0.0.1 ansible_port=2222 ansible_user=vagrant ansible_private_key_file=.vagrant/machines/default/virtualbox/private_key
