Stage 2 complete - added Terraform scripts and reused Ansible playbook

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,4 @@
 [all]
-yolo-app ansible_host=127.0.0.1 ansible_port=2222 ansible_user=vagrant ansible_private_key_file=.vagrant/machines/default/virtualbox/private_key
+backend_app ansible_host=backend_app ansible_connection=docker
+mongo_db ansible_host=mongo_db ansible_connection=docker
+frontend_app ansible_host=frontend_app ansible_connection=docker
